# search

./: .gitignore  DDdebug_output.txt  LICENSE  README.md  clinical_data_ext.py  docker-compose.yml  pyproject.toml  pytest copy.ini  renovate.json  requirements.txt
agency/: .env.template  Dockerfile  Makefile  Makefile_ECR  README.md  brave.goggle  pyproject.toml  text2sql_dag.html
agency/app/: developer.py  main.py  settings.py
agency/app/api/: __init__.py  api.py  search.py
agency/app/caching/: decorators.py  generics.py  redis.py  tests.py
agency/app/database/: nebula_graph.py  pubmed_postgres.py  redis.py
agency/app/dspy_integration/: clinical_trials_response_refinement.py  clinical_trials_sql.py  router_prompt.py
agency/app/embedding/: embedding_engine.py  splade_embedding.py
agency/app/grpc_types/: agency_pb2.py  agency_pb2.pyi  agency_pb2_grpc.py
agency/app/pubmed_retrieval/: cluster_engine.py  clusterretrievalengine.py  parent_engine.py  parentretrievalengine.py  types.py
agency/app/query_node_process/: nodeprocessengine.py
agency/app/router/: orchestrator.py
agency/develop/: developer.py  settings.py
agency/evaluation/: data_collection.ipynb  question_answers_eval_data.csv
agency/helm/: Chart.yaml  values.yaml
agency/prompt_experimentation/: base_rag_QA_random.json  learning_QA_eval_data.ipynb  mixtal_script_output_rag.json  pe_router.ipynb  pe_script.py  prompt_optimization_QA_eval_data.ipynb
backend/: .env  .env.template  Dockerfile  README.md  another_one.txt  clincal_trials_data.py  clinical_trial_json_dump.csv  clinical_trial_json_dump.json  debug_chembl.txt  debug_file_clinical_trials.json  debug_file_clinical_trials.txt  debug_log_ragas.txt  one_that_got_away.txt  pyproject.toml  text2sql_dag.html
backend/app/: chembl_data_debug_source.csv  config.py  grpc_server.py  main.py  make_it_rain.py  ragas_data_chembl.csv  ragas_dataset.csv  ragas_score_all.csv  ragas_try.py  settings.py
backend/evaluation/: data_collection.ipynb  question_answers_eval.csv
backend/prompt_experimentation/: base_rag_QA_random.json  check_groq.py  clinical_trials_script.py  codellama_debug_log_file.csv  codellama_nsql_debug_log_file.csv  llama2_clinical_trials.csv  microsoft_phi_rag.json  mixtral-8x7b-32768_debug_log_file.csv  nous7b_debug_log_file.csv  nous7b_synthesis_prompt.json  pe_clinical_trials.ipynb  pe_router.ipynb  pe_script.py  phi-2_debug_log_file.csv  response_synthesis_data.csv  response_synthesis_prompt_refinement.py
backend/ragas_data/: chembl_eval_data.csv  data_chembl.csv  ragas_try.py  run_pubmed_queries.py
llmlingua_service/: Dockerfile  Makefile  pyproject.toml
llmlingua_service/app/: main.py
server/: .dockerignore  .env.template  .gitignore  Cargo.toml  Dockerfile  Dockerfile_sqlx  Makefile  README.md  build.rs  sqlx-test-docker-compose.yaml
server/.sqlx/: query-086da61a1f6ccebc6d22fd851641793e2f9709a3c5108fef9dab8381c9b2ee45.json  query-0961dde5db6d46ac22f13788dc8c2bea1b9d6ae31aa55c0093024948f1ad17a4.json  query-0c93e9ca88f7f70aab04284e467507ccb830f5e9ab6602c127d09261d4b375be.json  query-16ab4584237414a8b3f1011fb10b45e788e6f3b415b8f72e48927ec5f99b8fe3.json  query-23983f172d02392576f15d93037edd08e05bc2e7758e22f966111422199698d0.json  query-29ef534c8dec3b0822559ee28a5301acd854ff1669e6b6a70c81fd50c952e998.json  query-2af097ecfc139606f581858bfebfb6db10aec38671ebe21c8a579d81ffc699d8.json  query-32bf4f350636d69dd46edda4d0c7af0c79fb04c8b5358aa753a2e714b7a44a87.json  query-4b0680a60905901c8376bf4224e46e2c6e90e002c4c6b3d0c94990716704a2e5.json  query-50cf2fc244b2b5d3fa484577a2056e3f2d9e03c3dd8996ae95887576791aff9a.json  query-575b567031740fcf4c95cd7322917d6ea0cd38db47cb2266d8ce7ac69e62e3b1.json  query-65b1487c46bb050524858ef3ebf8876af384eee82317f2be5ad4b0ff0914c273.json  query-6c38286ebb64920001a97cebf488128fe0f468e4451ff7ea20579a978a5d611a.json  query-71e0c5d19a0d0245b6ef6e2a2dcdf21dcb69147824e73b46eb5b7ea30445556f.json  query-730b2ccd9219ad6dfbe89e08220ce69e7367eff2653379ef731cb55dac6fbd3b.json  query-7f3aa259bd32b4d8ce02e5d1995ce24d4a1803ab24474b6e4af2ddaf5f6f00e0.json  query-8603a35934ee458072e089b7994dd19c2f98b8864475f40a435735c741d8041e.json  query-9081b38306b54a242d282d9c41ce0202da7e320a49cd7c20da94c3e3e7afc009.json  query-9e24ef47cd1ad6bb87d66a3ede876607695a29ede2f87547cb16ecfd87ba4e11.json  query-a101d3708b8506c9af02ee42596fe07202b5c5f4de22a80fd504364c130cb496.json  query-a3300cb44e90f76b4f9acefc227fc8a0a8686a250812fe534bce9bd610c15867.json  query-aef296c82f2db52d1b9213f1c0e76665ad39685158f62eb525019b3f41c14283.json  query-bc82472e3df0b99af83ab2dcf824c8befba5e3782645d76322d5105d69a697a9.json  query-ce09df1d8db96f4d5fe17991e9f71939a4e9bb5fbaf1232a5fde29021ed5170e.json  query-d0f1d876f53f8a9fd2ba4cde9b6ae68a39614b768962d123b010c50b940b793d.json  query-d20668931a9349cda924525d36901be4971a2172e924a19f2ac87ee1ccd676cc.json  query-deb769a9b7dae9a2d590524e4f5f466a6bf2bf0494480e4d5b596200acec0ec3.json  query-e26c3855ae2e2024957f2fbad8a8dfc1cb13ccad52efcd9ec115ae091421ee72.json  query-e286bbdbfb6172ea31377a2464a6203a91427b1e379a362e79ffe90f824c677b.json  query-e9d050c9eca89fda9f89136769bfc2cb8dda67a758edd1f955fbbe691620ffd2.json  query-ea69f3b1335e367b3492111c43c35782e6651c01a3427ddd9b00ac12d2cb624e.json  query-efb7df3755e3da0801bfb74dc0774d4ac615d4d1269a44eb31b0d3184ad44a2c.json
server/config/: default.toml  dev.toml  staging.toml
server/documentation/: search-api.md
server/helm/: Chart.yaml  search_server.yaml  values.yaml
server/migrations/: 001_setup.sql  003_threads.sql  20240321210310_users.sql  20240403115016_search_history.sql  20240603072939_setup.sql  20240603072942_users.sql  20240603072949_search_history.sql  20240604111752_searches.sql  20240604111802_sources.sql  20240604111824_search_sources.sql  20240604111833_collections.sql  20240614061840_whitelisted_emails.sql
server/protos/: rag.proto
server/src/: cache.rs  custom_types.rs  err.rs  grpc_client.rs  lib.rs  main.rs  query_rephraser.rs  secrets.rs  settings.rs  startup.rs  telemetry.rs
server/tests/: health_check.rs  search.rs  users.rs  utils.rs
(+416 files in other folders)
