[tool.poetry]
name = "app"
version = "0.1.0"
description = "A healthcare search engine"
authors = ["raahul"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.109.0"
fastapi-doc-http-response = "^0.0.3"
fastapi-versioning = "^0.10.0"
llama-index = "^0.10.18"
phoenix = "^0.9.1"
pyvis = "^0.3.2"
requests = "^2.31.0"
sqlalchemy = "^2.0.15"
authx = "1.0.1b1"
itsdangerous = "^2.1.2"
llama-index-embeddings-text-embeddings-inference = "^0.1.2"
psycopg2-binary = "^2.9.9"
matplotlib = "^3.8.3"
python-multipart = "^0.0.9"
redis = "^5.0.3"
ruff = "^0.3.3"
nebula3-python = "^3.5.0"
sentry-sdk = "^1.43.0"
dspy = { git = "https://git@github.com/curieo-org/dspy.git" }
setuptools = "^69.2.0"
llama-index-llms-together = "^0.1.3"
llama-index-postprocessor-cohere-rerank = "^0.1.2"
together = "^0.2.11"
llama-index-vector-stores-qdrant = "^0.1.4"
openinference-semantic-conventions = "^0.1.5"
openinference-instrumentation-llama-index = "^1.2.1"
opentelemetry-exporter-otlp = "^1.23.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
