[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.81", features = ["backtrace"] }
axum = { version = "0.7.4", features = ["macros"] }
chrono = { version = "0.4.35", features = ["serde"] }
color-eyre = "0.6.3"
config = { version = "0.14.0", features = ["toml"] }
dotenvy = "0.15.7"
hyper = { version = "1.2.0", features = ["full"] }
once_cell = "1.19.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = "1.0.197"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tracing = "0.1.40"
