[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.81", features = ["backtrace"] }
async-trait = "0.1.78"
axum = { version = "0.7.4", features = ["macros"] }
axum-login = "0.15.0"
chrono = { version = "0.4.35", features = ["serde"] }
color-eyre = "0.6.3"
config = { version = "0.14.0", features = ["toml"] }
dotenvy = "0.15.7"
hyper = { version = "1.2.0", features = ["full"] }
oauth2 = "4.4.2"
once_cell = "1.19.0"
password-auth = "1.0.0"
reqwest = { version = "0.12.1", features = ["json"] }
serde = "1.0.197"
serde_json = "1.0.114"
serde_urlencoded = "0.7.1"
sqlx = { version = "0.7.4", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "migrate",
    "uuid",
    "time",
] }
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tracing = "0.1.40"
tower = "0.4.13"
tracing-error = "0.2.0"
tracing-log = "0.2.0"
tracing-logfmt = "0.3.4"
tracing-subscriber = { version = "0.3.18", features = [
    "json",
    "registry",
    "env-filter",
] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
log = "0.4.21"
redis = { version = "0.25.2", features = ["tokio-comp", "json"] }
